eks/alb-controller/manifests/Test-App.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: alb-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: alb-test
spec:
  selector:
    app: app1
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: alb-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: alb-test
spec:
  selector:
    app: app2
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: alb-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: hashicorp/http-echo
          args:
            - "-text=Hello from app3"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: alb-test
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 5678
