eks/alb-controller/manifests/Ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-routing
  namespace: alb-test
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: multi-app-group
spec:
  ingressClassName: alb
  rules:
    - host: app1.kubecluster.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
    - host: app2.kubecluster.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80
